--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-paginate": "^8.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
