--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,8 +14,10 @@
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "axios": "^1.7.9",
+    "lottie-react": "^2.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-paginate": "^8.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
